--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,3 +14,9 @@ jobs:
         run: |
           node -v
           npm -v 
+      - name: python command
+        run: |
+          import platform
+          print
+          (platform.processor())
+        shell: python       #This is to run the in python shell
