--- a/intial_github_action.yml
+++ b/intial_github_action.yml
@@ -14,3 +14,10 @@ jobs:
         run: |
           node -v
           npm -v 
+            - name: python command
+      - name: python shell
+        run: |
+          import platform
+          print
+          (platform.processor())
+        shell: python       #This is to run the in python shell
