--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
         shell: python       #This is to run the in python shell
   run-windows-commands:       #This is a Second Job
     runs-on: windows-latest
+    needs: ["run-shell-command"]
     steps:
       - name: Powershell Directory
         run: Get-Location
