--- a/intial_github_action.yml
+++ b/intial_github_action.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Directory Bash
         run: pwd
         shell: bash
-  run-windows-com:
+  run-com:
     runs-on: windows-latest
     if: ${{ always() }}           #always() conditional expression so that it always runs after job1 and job2 have completed, regardless of whether they were successful
     needs: ["run-windows-commands", "run-shell-command"]     #Expression URL: https://docs.github.com/en/actions/learn-github-actions/expressions#status-check-functions
