--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,9 @@ jobs:
       - name: Powershell Directory
         run: Get-Location
       - name: Directory Bash
-        run: pwd
+        run: |
+         pwd
+         ls
         shell: bash
   run-com:
     runs-on: windows-latest
