--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -23,3 +23,9 @@ jobs:
         run: | 
           pwd
           ls
+          echo  $GITHUB_SHA
+          echo $GITHUB_REPOSITORY
+          echo $GITHUB_WORKSPACE
+          echo "${{ github.token }}"
+          git clone git@github:$GITHUB_REPOSITORY
+          git checkout $GITHUB_SHA
