--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,14 @@
 name: My first github workflow
+
 on:    #Type of Event that will trigger the github worflow
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]  
+
+env:                  #This is for declaring a variable
+  continue: true
+
 jobs:
   run-shell-command: 
     runs-on: ubuntu-latest  #With this you can use type of runner with specific version like ubuntu/Windows/Macos
@@ -22,7 +27,7 @@ jobs:
         shell: python       #This is to run the in python shell
   run-windows-commands:       #This is a Second Job
     runs-on: windows-latest
-    if: ${{ failure() }}
+    if: ${{ failure() && fromJSON(env.continue) == 'true' }}
     needs: ["run-shell-command"]
     steps:
       - name: Powershell Directory
