--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -34,3 +34,5 @@ jobs:
           echo $GITHUB_REPOSITORY
           echo $GITHUB_WORKSPACE
           echo "${{ github.token }}"
+      - name: Just for changing it
+        run: echo "Greeting from Github"
