--- a/schedule_expression_github.yml
+++ b/schedule_expression_github.yml
@@ -7,6 +7,12 @@ on:    #Type of Event that will trigger the github worflow
   schedule:
     - cron: "*/5 * * * *"  #Minimum time internal for github cronjob is 5 minutes. It can be ru after 5 minutes only
     - cron: "*/6 * * * *" 
+  repository_dispatch:
+    types: 
+      - dev
+      - stage
+      - production
+
 jobs:
   run-shell-command: 
     runs-on: ubuntu-latest  
