--- a/schedule_expression_github.yml
+++ b/schedule_expression_github.yml
@@ -7,7 +7,7 @@ on:    #Type of Event that will trigger the github worflow
   schedule:
     - cron: "*/5 * * * *"  #Minimum time internal for github cronjob is 5 minutes. It can be ru after 5 minutes only
     - cron: "*/6 * * * *" 
-  repository_dispatch:
+  repository_dispatch:    # ["dev", "stage", "production"] You can also right this like this one.
     types: 
       - dev
       - stage
