--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,12 +72,11 @@ jobs:
           STEP_ENV: Step-var               
         run: echo "Hello this is our first github action"     
       - name: multline script 
-        # env:
-        #   STEP_ENV: Step-var   
+        env:
+          STEP_ENV: Step-var   
         run: |
           node -v
           npm -v 
-            - name: python command
       - name: Printing Global variable 
         run: |
           echo "GB_ENV: ${GB_ENV}"
