--- a/.github/workflows/secret.yml
+++ b/.github/workflows/secret.yml
@@ -24,3 +24,4 @@ jobs:
           echo "GB_ENV: ${GB_ENV}"
           echo "JOB_ENV: ${JOB_ENV}"
           echo "STEP_ENV: ${STEP_ENV}"
+          echo "GITHUB_TOKEN: ${GITHUB_TOKEN}"
