--- a/.github/workflows/secret.yml
+++ b/.github/workflows/secret.yml
@@ -1,4 +1,8 @@
 name: My  github enviornmental variable workflow
+on:
+  push:
+    branches:
+      - "master"
 env:
   GB_ENV: Github
   GITHUB_TOKEN: ${{ secrets.TOKEN }}   #This is a secret in github to access the token of github
