--- a/.github/workflows/github_action_checkout.yml
+++ b/.github/workflows/github_action_checkout.yml
@@ -19,7 +19,7 @@ jobs:
         git config --global user.email "my-bot@bot.com"
         git config --global user.name "my-bot"
         git fetch
-        git config --global init.defaultBranch master
+        git branch --set-upstream-to=master
         git pull
         ls -a
         echo $RANDOM >> RANDOM.txt
