--- a/cron.yml
+++ b/cron.yml
@@ -8,6 +8,12 @@ on:
     types:
       - "opened"
       - "reopened"
+      - "closed"
+      - "review_requested"
+      - "assigned"
+  schedule:
+    - cron: "10,11 * * * *"
+    - cron: "12-13 * * * *" 
 
 jobs:
   run-github-actions:
