--- a/.github/workflows/encrypt_decrypt.yml
+++ b/.github/workflows/encrypt_decrypt.yml
@@ -9,7 +9,8 @@ jobs:
   github_checkout_stage:
     runs-on: ubuntu-latest
     steps:
-    - uses: action/checkout@v1
+    - name:  checkout Code
+      uses: action/checkout@v3
     - name: Decrypt File
       run: gpg --quiet --batch  --yes --decrypt --passphrase="$PASS"  --output $HOME/secret.json secret.gpg
       env: 
