--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -9,6 +9,7 @@ jobs:
         id: github_context_step
         run: echo '${{ toJSON(github) }}'
       - name: Dump job context
+        id: test-id
         if: github.events_name == 'push'
         run: echo '${{ toJSON(job) }}'
       - name: Dump steps context
@@ -21,7 +22,7 @@ jobs:
         run: echo '${{ toJSON(matrix) }}'
   normal_ci:
     runs-on: ubuntu-20.04
-    if: runner.os == 'Linux'
+    if: steps.test-id.outputs.outcome == 'success'
     steps:
       - name: Git checkout
         uses: actions/checkout@v3
