--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -9,7 +9,7 @@ jobs:
         id: github_context_step
         run: echo '${{ toJSON(github) }}'
       - name: Dump job context
-        if: ${{github.events_name == 'push'}}
+        if: ${{github.repositoryUrl == 'https://github.com/SOHAN-cyber/github-action.git'}}
         run: echo '${{ toJSON(job) }}'
       - name: Dump steps context
         id: test_id
@@ -19,10 +19,11 @@ jobs:
       - name: Dump strategy context
         run: echo '${{ toJSON(strategy) }}'
       - name: Dump matrix context
+        if: ${{steps.test_id.outputs.outcome == 'success'}}
         run: echo '${{ toJSON(matrix) }}'
   normal_ci:
     runs-on: ubuntu-20.04
-    if: ${{steps.test_id.outputs.outcome == 'success'}}
+    if: ${{ github.events == 'push' }}
     steps:
       - name: Git checkout
         uses: actions/checkout@v3
