--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -9,7 +9,7 @@ jobs:
         id: github_context_step
         run: echo '${{ toJSON(github) }}'
       - name: Dump job context
-        if: ${{github.repositoryUrl == 'git://github.com/SOHAN-cyber/github-action.git'}}
+        if: ${{github.repositoryUrl == 'git://github.com/SOHAN-cyber/github-action.git' && github.event_name == 'pull' }}
         run: echo '${{ toJSON(job) }}'
       - name: Dump steps context
         id: test_id
@@ -19,11 +19,11 @@ jobs:
       - name: Dump strategy context
         run: echo '${{ toJSON(strategy) }}'
       - name: Dump matrix context
-        if: ${{steps.test_id.outcome == 'success'}}
+        if: ${{steps.test_id.outcome == 'success' || github.event_name == 'push' }}
         run: echo '${{ toJSON(matrix) }}'
   normal_ci:
     runs-on: ubuntu-20.04
-    if: ${{ github.event_name == 'push' }}
+    if: ${{ github.event_name == 'push' && github.repositoryUrl == 'git://github.com/SOHAN-cyber/github-action.git' }}
     needs: ["dump_contexts_to_log"]
     steps:
       - name: Git checkout
