--- a/.github/workflows/node_version.yaml
+++ b/.github/workflows/node_version.yaml
@@ -4,13 +4,19 @@ on: push
 
 jobs:
   node0-version-changes:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+       os: [macos-latest,ubuntu-latest,windows-latest]
+       node_version: [6,8,10,14]
+      fail-fast: true
+      max-parallel: 2
+    runs-on: ${{matrix.os}}
     steps: 
       - name: node version
         run: node -v
       - name: changing node version
         uses: actions/setup-node@v3
         with:
-          node-version: 14
+          node-version: ${{ matrix.node_version }}
       - name: printing the node version
         run: node -v 
