--- a/ecs.yml
+++ b/ecs.yml
@@ -4,11 +4,9 @@ on:
     branches:
       - "master"
 env:
-  AWS_REGION:   us-west-2                         
-  ECR_REPOSITORY_NAME: github-test-action         
-  CONTAINER_NAME: github-action 
-  BRANCH_NAME: main
-  GITHUB_REPO: SOHAN-cyber/NODE-MERN-PROJECT                  
+  AWS_REGION:   us-west-2                          # set this to your preferred AWS region, e.g. us-west-1
+  ECR_REPOSITORY_NAME: github-test-action          # set this to your Amazon ECR repository name
+  CONTAINER_NAME: github-action                    # set this to the name of the container in the
 jobs:
   deploy:
     name: Deploy
@@ -17,24 +15,12 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-      with:
-        repository: $GITHUB_REPO
-        token: $secrets.TOKEN
-        ref: $BRANCH_NAME
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ env.AWS_REGION }}
-    - name: Installing dependency
-      uses: actions/setup-node@v3
-      with:
-        node_version: 14
-    - name: Installing dependency
-      run: |
-        ls -a
-        npm i
     - name: Creating a ECR
       run: aws ecr create-repository --repository-name $ECR_REPOSITORY_NAME --region $AWS_REGION
     - name: Login to Amazon ECR
