--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -26,5 +26,8 @@ jobs:
         run: |
           echo "GB_ENV: ${GB_ENV}"
           echo "JOB_ENV: ${JOB_ENV}"
-          echo "STEP_ENV: ${STEP_ENV}"
-
+          echo "STEP_ENV:     - name: Run a script
+      - name: Run a script 
+        run: ./script.sh
+        with:
+          args: "Some String"
