--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -28,6 +28,4 @@ jobs:
           echo "JOB_ENV: ${JOB_ENV}"
           echo "STEP_ENV:     - name: Run a script
       - name: Run a script 
-        run: ./script.sh
-        with:
-          args: "Some String"
+        run: ./script.sh Some 
