--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -27,4 +27,5 @@ jobs:
           echo "GB_ENV: ${GB_ENV}"
           echo "JOB_ENV: ${JOB_ENV}"
       - name: Run a script 
+        uses: actions/checkout@v1
         run: ./script.sh Some 
