--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -28,4 +28,5 @@ jobs:
           echo "JOB_ENV: ${JOB_ENV}"
       - name: Run a script 
         uses: actions/checkout@v1
+      - name: Run a script
         run: ./script.sh Some 
