--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -4,7 +4,7 @@ on:
     branches: [ master ]
 env:
   GB_ENV: Github
-  GITHUB_TOKEN: ${{ secrets.TOKEN }}   #This is a secret in github to access the token of github
+  GITHUB_TOKEN: ${{ secrets.TOKEN }}
 
 jobs:
   run-shell-command: 
@@ -30,3 +30,11 @@ jobs:
         uses: actions/checkout@v1
       - name: Run a script
         run: ./script.sh Some 
+      - name: Sending Slack notification
+        if: {{ always() }}
+        uses: docker://technosophos/slack-notify
+        env:
+           SLACK_WEBHOOK: ${{ secrets.SLACKWEBHOOK }}
+           SLACK_MESSAGE: 'Hi Team, This is to inform you that Last workflow was "${{ job.status }}"'. 
+
+            
