--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Run a script
         run: ./script.sh Some 
       - name: Sending Slack notification
-        if: {{ always() }}
+        if: ${{ always() }}
         uses: docker://technosophos/slack-notify
         env:
            SLACK_WEBHOOK: ${{ secrets.SLACKWEBHOOK }}
