--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -35,5 +35,5 @@ jobs:
         uses: docker://technosophos/slack-notify
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACKWEBHOOK }}
-          SLACK_MESSAGE: 'Hi Team, This is to inform you that Last workflow was "${{ job.status }}"'
+          SLACK_MESSAGE: 'Hi Team, This is to inform you that Last ${{ job }} was ${{ job.status }}'
             
