--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -1,4 +1,4 @@
-name: My  github enviornmental variable workflow
+name: My github enviornmental variable workflow
 on:   
   push:
     branches: [ master ]
@@ -35,5 +35,5 @@ jobs:
         uses: docker://technosophos/slack-notify
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACKWEBHOOK }}
-          SLACK_MESSAGE: 'Hi Team, This is to inform you that Last ${{ job }} was ${{ job.status }}'
+          SLACK_MESSAGE: 'Hi Team, This is to inform you that Last NodeJs Worflow was ${{ job.status }}'
             
