--- a/docker-hub.yml
+++ b/docker-hub.yml
@@ -26,3 +26,10 @@ jobs:
         docker login -u $username -p $password
         docker push $DOCKERHUB_REGISTRY:$IMAGE_TAG
         docker push  $DOCKERHUB_REGISTRY:$TAG
+    - name: Sending Slack notification
+      if: always()
+      uses: docker://technosophos/slack-notify
+      env:
+        SLACK_WEBHOOK: ${{ secrets.SLACKWEBHOOK }}
+        SLACK_MESSAGE: 'Hi Team, This is to inform you that Last NodeJs Worflow was ${{ job.status }}'
+            
