--- a/ecr.yml
+++ b/ecr.yml
@@ -35,3 +35,10 @@ jobs:
         docker image tag $ECR_REGISTRY/$ECR_REPOSITORY_NAME:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY_NAME:$TAG
         docker push $ECR_REGISTRY/$ECR_REPOSITORY_NAME:$IMAGE_TAG
         docker push  $ECR_REGISTRY/$ECR_REPOSITORY_NAME:$TAG
+    - name: Sending Slack notification
+      if: always()
+      uses: docker://technosophos/slack-notify
+      env:
+        SLACK_WEBHOOK: ${{ secrets.SLACKWEBHOOK }}
+        SLACK_MESSAGE: 'Hi Team, This is to inform you that Last NodeJs Worflow was ${{ job.status }}'
+            
